Fix header's padding on small-width screens Fix issue #67

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ Theme URI: https://github.com/deshack/melany
 Author: Mattia Migliorini
 Author URI: http://www.deshack.net/
 Description: Melany, a simple responsive WordPress theme focused on content, everywhere.
-Version: 0.5.4
+Version: 0.5.5
 License: GNU Affero General Public License
 License URI: http://melany.deshack.net/LICENSE.txt
 Tags: light, green, two-columns, right-sidebar, flexible-width, custom-background, featured-image-header, full-width-template
@@ -155,8 +155,13 @@ input[type="color"]:focus,
 ----------------------------------------------- */
 
 .navbar .container-fluid{
-	padding-left:40px;
-	padding-right:40px;
+	padding:0 40px;
+}
+
+@media (max-width: 676px) {
+	.navbar .container-fluid{
+		padding:0;
+	}
 }
 
 /* Search bar */
